buildscript {
    repositories {
        mavenCentral() { metadataSources { mavenPom(); ignoreGradleMetadataRedirection() } }
        gradlePluginPortal() { metadataSources { mavenPom(); ignoreGradleMetadataRedirection() } }
    }
    dependencies {
        classpath 'org.graalvm.buildtools:native-gradle-plugin:0.10.4'
    }
}

apply plugin: 'org.graalvm.buildtools.native'
apply plugin: 'application'
apply plugin: 'com.palantir.external-publish-jar'

mainClassName = 'com.palantir.javaformat.java.Main'

description = 'Palantir Java Format'

dependencies {
    api project(':palantir-java-format-spi')
    api 'com.google.guava:guava'
    implementation 'org.functionaljava:functionaljava'
    implementation 'com.fasterxml.jackson.core:jackson-core'
    implementation 'com.fasterxml.jackson.core:jackson-databind'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8'
    implementation 'com.fasterxml.jackson.module:jackson-module-parameter-names'

    testImplementation 'com.google.guava:guava-testlib'
    testImplementation 'com.google.truth:truth'
    testImplementation 'com.google.testing.compile:compile-testing'
    testImplementation 'org.assertj:assertj-core'
    testImplementation 'org.junit.jupiter:junit-jupiter-migrationsupport'
    testImplementation 'org.junit.jupiter:junit-jupiter'

    compileOnly 'com.google.auto.service:auto-service'
    annotationProcessor 'com.google.auto.service:auto-service'
    compileOnly "org.immutables:value::annotations"
    annotationProcessor "org.immutables:value"

    compileOnly 'org.derive4j:derive4j-annotation'
    annotationProcessor 'org.derive4j:derive4j'
}

def exports = [
        'jdk.compiler/com.sun.tools.javac.file',
        'jdk.compiler/com.sun.tools.javac.main',
        'jdk.compiler/com.sun.tools.javac.parser',
        'jdk.compiler/com.sun.tools.javac.tree',
        'jdk.compiler/com.sun.tools.javac.util',
        'jdk.compiler/com.sun.tools.javac.code',
        'jdk.compiler/com.sun.tools.javac.api'
]

def jvmArgList = exports.collect { value -> "--add-exports=${value}=ALL-UNNAMED".toString() }

graalvmNative {
    binaries {
        main {
            javaLauncher = javaToolchains.launcherFor {
                languageVersion = JavaLanguageVersion.of(23)
                vendor = JvmVendorSpec.GRAAL_VM
            }
            imageName = 'palantir-java-format'
            mainClass = mainClassName
            fallback = false
            sharedLibrary = false
            configurationFileDirectories.from(file('src/main/resources/META-INF/native-image'))
            buildArgs.addAll("-H:ConfigurationFileDirectories=${projectDir}/src/main/resources/META-INF/native-image",
                    '-H:+UnlockExperimentalVMOptions',
                    '-H:IncludeResourceBundles=com.sun.tools.javac.resources.compiler',
                    '-H:IncludeResourceBundles=com.sun.tools.javac.resources.javac',
                    '--no-fallback',
                    '--initialize-at-build-time=com.sun.tools.javac.file.Locations',
                    '-H:+ReportExceptionStackTraces',
                    '-H:-UseContainerSupport',
                    "-march=compatibility")
            jvmArgs.addAll(jvmArgList)
        }
    }
}


// The image requires parameters to be passed to; eg. gw nativeRun -Pargs=--palantir,-i,<file>
tasks.named("nativeRun", org.graalvm.buildtools.gradle.tasks.NativeRunTask) {
    runtimeArgs.addAll(project.hasProperty('appArgs') ? project.appArgs.split(',') : [])
}

tasks.withType(JavaCompile).configureEach {
    options.errorprone.disable 'StrictUnusedVariable'

    // Allow access to internal javac apis
    options.compilerArgs += jvmArgList

    if (JavaVersion.current() < JavaVersion.VERSION_14) {
        excludes = ['**/Java14InputAstVisitor.java']
    }
}

tasks.withType(Test).configureEach {
    jvmArgs = jvmArgList
}

tasks.withType(Javadoc).configureEach {
    // Allow access to internal javac apis
    options.optionFiles << file('../gradle/javadoc.options')

    if (JavaVersion.current() < JavaVersion.VERSION_14) {
        exclude '**/Java14InputAstVisitor.java'
    }
}

// false positives due to org.junit.runners.* in the test cases
tasks.named("checkJUnitDependencies") {
    enabled = false
}

tasks.named("test") {
    // Run all classes and tests in parallel
    // https://junit.org/junit5/docs/current/user-guide/#writing-tests-parallel-execution
    systemProperty 'junit.jupiter.execution.parallel.mode.default', 'concurrent'
}

// necessary to compile Java14InputAstVisitor
idea {
    module.languageLevel = new org.gradle.plugins.ide.idea.model.IdeaLanguageLevel(14)
}

// This block may be replaced by BaselineExportsExtension exports
// once https://github.com/gradle/gradle/issues/18824 is resolved.
tasks.named("jar", Jar) {
    manifest {
        attributes('Add-Exports': exports.join(' '))
    }
}

tasks.register('fatJar', Jar) {
    dependsOn tasks.jar, project(':palantir-java-format-spi').tasks.jar
    manifest {
        attributes 'Main-Class': mainClassName
        attributes('Add-Exports': exports.join(' '))
    }
    archiveBaseName = 'palantir-java-format-all'
    duplicatesStrategy = DuplicatesStrategy.WARN
    from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
    with jar
}


tasks.named("build") {
    dependsOn tasks.named("fatJar"), tasks.named("nativeCompile")
}
